--- a/index.html
+++ b/index.html
@@ -701,6 +701,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
     <script>
+        const audioContext = new (window.AudioContext || window.webkitAudioContext)();
         let selectedFiles = [];
         let processedFiles = [];
         let tempoValue = 2.0;
